--- a/DietTrackerBlazorServer/Shared/MainLayout.razor
+++ b/DietTrackerBlazorServer/Shared/MainLayout.razor
@@ -33,9 +33,9 @@
                         Edit Food Types
                     </div>
                 </MudNavLink>
-                <MudNavLink Href="/Stats">Stats</MudNavLink>
-                <MudNavLink Href="/HealthDataPoints">Data points</MudNavLink>
-                <MudNavLink Href="/about">About</MudNavLink>
+                <MudNavLink Href="/AddHealthDataPoint">Data points</MudNavLink>
+                @* <MudNavLink Href="/Stats">Stats</MudNavLink>
+                <MudNavLink Href="/about">About</MudNavLink> *@
             </MudNavMenu>
         </MudDrawer>
 
