--- a/DietTrackerBlazorServer/Areas/Identity/Pages/Account/Login.cshtml
+++ b/DietTrackerBlazorServer/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,51 +5,46 @@
     ViewData["Title"] = "Log in";
 }
 
-<h1>@ViewData["Title"]</h1>
-<div class="row">
-    <div class="col-md-4">
-        <section>
-            <form id="account" method="post">
-                @*<h2>Use a local account to log in.</h2>*@
+
+<form id="account" method="post">
+
+    <div class="d-flex justify-center mt-8">
+        <div class="dt-panel">
+            <div class="d-flex flex-column align-center gap-2">
+
+                <h1>@ViewData["Title"]</h1>
                 <hr />
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-floating">
-                    <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                    <label asp-for="Input.Email" class="form-label"></label>
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+                <div asp-validation-summary="ModelOnly" class="mud-error-text"></div>
+                <div class="dt-input-group">
+                    <label asp-for="Input.Email"></label>
+                    <input asp-for="Input.Email" class="dt-input" autocomplete="username" aria-required="true" />
+                    <span asp-validation-for="Input.Email" class="mud-error-text"></span>
                 </div>
-                <div class="form-floating">
-                    <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" />
-                    <label asp-for="Input.Password" class="form-label"></label>
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
+
+                <div class="dt-input-group">
+                    <label asp-for="Input.Password"></label>
+                    <input asp-for="Input.Password" class="dt-input" autocomplete="current-password" aria-required="true" />
+                    <span asp-validation-for="Input.Password" class="mud-error-text"></span>
                 </div>
-                <div>
-                    <div class="checkbox">
-                        <label asp-for="Input.RememberMe" class="form-label">
-                            <input class="form-check-input" asp-for="Input.RememberMe" />
-                            @Html.DisplayNameFor(m => m.Input.RememberMe)
-                        </label>
-                    </div>
+
+                <div class="checkbox">
+                    <label asp-for="Input.RememberMe" class="form-label">
+                        <input class="form-check-input" asp-for="Input.RememberMe" />
+                        @Html.DisplayNameFor(m => m.Input.RememberMe)
+                    </label>
                 </div>
-                <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
-                </div>
-                <div>
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
-                    <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                    </p>
-                    @*<p>
-                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
-                    </p>*@
-                </div>
-            </form>
-        </section>
+
+                <button id="login-submit" type="submit" class="w-100 btn btn-lg">Log in</button>
+                <p class="mt-4">
+                    <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                </p>
+                <p>
+                    <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                </p>
+            </div>
+        </div>
     </div>
-    
-</div>
+</form>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
