--- a/DietTrackerBlazorServer/Pages/Shared/_Layout.cshtml
+++ b/DietTrackerBlazorServer/Pages/Shared/_Layout.cshtml
@@ -7,9 +7,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - DietTrackerBlazorServer</title>
+    <title>Health Tracker</title>
 
-    <environment include="Development">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="~/temp/MudBlazor.min.css" rel="stylesheet" />
+    <link href="~/css/site.css" rel="stylesheet" />
+
+    @* <environment include="Development">
         <link rel="stylesheet" href="~/Identity/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/Identity/css/site.css" />
     </environment>
@@ -19,10 +23,31 @@
               asp-fallback-href="~/Identity/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/Identity/css/site.css" asp-append-version="true" />
-    </environment>
+    </environment> *@
 </head>
+
+
 <body>
-    <header>
+    <header class="dt-header d-flex flex-nowrap align-center justify-space-between gap-4">
+        <div class="dt-header-text">
+            <a style="color:white;" href="/">Health Tracker</a>
+        </div>
+        @{
+            await Html.RenderPartialAsync("_LoginPartial");
+        }
+    </header>
+
+    @* <header class="mud-appbar mud-appbar-dense mud-appbar-fixed-top mud-elevation-4">
+        <div class="mud-toolbar mud-toolbar-dense mud-toolbar-gutters mud-toolbar-appbar">
+            <button type="button" class="mud-button-root mud-icon-button mud-inherit-text hover:mud-inherit-hover mud-ripple mud-ripple-icon mud-icon-button-edge-start" _bl_4a9c034e-7169-4feb-935a-ea334131907a=""><span class="mud-icon-button-label"><!--!--><svg class="mud-icon-root mud-svg-icon mud-icon-size-medium" focusable="false" viewBox="0 0 24 24" aria-hidden="true"><!--!--><path d="M0 0h24v24H0z" fill="none"></path><path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"></path></svg></span></button>
+            Health Tracker
+
+            <div class="flex-grow-1"></div>
+            <a href="Identity/Account/Manage" class="mud-typography mud-link mud-inherit-text mud-link-underline-hover mud-typography-body1">Hello, zoom377@googlemail.com!</a>
+            <a href="Identity/Account/LogOut" class="mud-typography mud-link mud-inherit-text mud-link-underline-hover mud-typography-body1">Log Out</a>
+        </div>
+    </header> *@
+    @* <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" href="~/">DietTrackerBlazorServer</a>
@@ -41,13 +66,13 @@
                     else
                     {
                         throw new InvalidOperationException("The default Identity UI layout requires a partial view '_LoginPartial' " +
-                            "usually located at '/Pages/_LoginPartial' or at '/Views/Shared/_LoginPartial' to work. Based on your configuration " +
-                            $"we have looked at it in the following locations: {System.Environment.NewLine}{string.Join(System.Environment.NewLine, result.SearchedLocations)}.");
+                        "usually located at '/Pages/_LoginPartial' or at '/Views/Shared/_LoginPartial' to work. Based on your configuration " +
+                        $"we have looked at it in the following locations: {System.Environment.NewLine}{string.Join(System.Environment.NewLine, result.SearchedLocations)}.");
                     }
                 </div>
             </div>
         </nav>
-    </header>
+    </header> *@
 
     <div class="container">
         <partial name="_CookieConsentPartial" optional />
@@ -55,9 +80,8 @@
             @RenderBody()
         </main>
     </div>
-    <footer class="footer border-top pl-3 text-muted">
+    @* <footer class="footer border-top pl-3 text-muted">
         <div class="container">
-        &copy; 2022 - DietTrackerBlazorServer
             @{
                 var foundPrivacy = Url.Page("/Privacy", new { area = "" });
             }
@@ -66,9 +90,13 @@
                 <a asp-area="" asp-page="/Privacy">Privacy</a>
             }
         </div>
-    </footer>
+    </footer> *@
 
-    <environment include="Development">
+    @* <script src="_content/MudBlazor/MudBlazor.min.js"></script> *@
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="~/temp/MudBlazor.min.js"></script>
+
+    @* <environment include="Development">
         <script src="~/Identity/lib/jquery/dist/jquery.js"></script>
         <script src="~/Identity/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
         <script src="~/Identity/js/site.js" asp-append-version="true"></script>
@@ -87,7 +115,7 @@
                 integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj">
         </script>
         <script src="~/Identity/js/site.js" asp-append-version="true"></script>
-    </environment>
+    </environment> *@
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
