before scaffold identity email verif

--- a/DietTrackerBlazorServer/Pages/Shared/_LoginPartial.cshtml
+++ b/DietTrackerBlazorServer/Pages/Shared/_LoginPartial.cshtml
@@ -30,6 +30,6 @@
 else
 {
         <a class="dt-header-text" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
-        <a class="dt-header-text" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        <a class="dt-header-text ml-4" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
 }
 </ul>
