--- a/DietTrackerBlazorServer/Areas/Identity/Pages/Account/Login.cshtml
+++ b/DietTrackerBlazorServer/Areas/Identity/Pages/Account/Login.cshtml
@@ -13,7 +13,7 @@
 
                 <h1>@ViewData["Title"]</h1>
                 <hr />
-                <div asp-validation-summary="ModelOnly" class="mud-error-text"></div>
+                <div asp-validation-summary="ModelOnly" class="red-text"></div>
                 <div class="dt-input-group">
                     <label asp-for="Input.Email"></label>
                     <input asp-for="Input.Email" class="dt-input" autocomplete="username" aria-required="true" />
